--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tuomas Eerola at 2025-03-28 09:01:55 +0000 
+%% Created for Tuomas Eerola at 2025-04-02 13:11:59 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{yang2011,
+	address = {Boca Raton, US},
+	author = {Yang, Y.-H. and Chen, H. H.},
+	booktitle = {Yang, Y.-H., & Chen, H.H. (2011). Music Emotion Recognition (1st ed.). CRC Press. },
+	date-added = {2025-04-02 13:10:32 +0100},
+	date-modified = {2025-04-02 13:11:59 +0100},
+	doi = {https://doi.org/10.1201/b10731},
+	publisher = {CRC Press},
+	title = {Music Emotion Recognition},
+	url = {https://doi.org/10.1201/b10731},
+	year = {2011}}
 
 @inproceedings{santana2020,
 	author = {Santana, Igor Andr{\'e} Pegoraro and Pinhelli, Fabio and Donini, Juliano and Catharin, Leonardo and Mangolin, Rafael Biazus and Feltrim, Val{\'e}ria Delisandra and Domingues, Marcos Aur{\'e}lio and others},
